--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,20 @@ services:
     ports:
       - 1080:1080
       - 1025:1025
-
+    networks:
+      - spring-demo
+  keycloak:
+    container_name: keycloak-bsn
+    image: quay.io/keycloak/keycloak:24.0.2
+    ports:
+      - 9090:8080
+    environment:
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin
+    networks:
+      - spring-demo
+    command:
+      - "start-dev"
 networks:
   spring-demo:
     driver: bridge
