--- a/Backend/src/main/resources/application.yml
+++ b/Backend/src/main/resources/application.yml
@@ -13,7 +13,10 @@ server:
 
 keycloak:
   server:
-    url: http://localhost:9090/auth
+    url: http://localhost:9090/
+  realm: Employees-Manager
+  resource: emp
   admin:
-    username: admin
-    password: admin
+    username: mohsen
+    password: 123
+
