--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-loading": "^2.0.3",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
